--- a/body.html
+++ b/body.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     body content
+    <ul>
+        <li>list 1</li>
+        <li>list 2</li>
+        <li>list 3</li>
+    </ul>
 </body>
 </html>
